--- a/gb/19/8/6/n11433979.md
+++ b/gb/19/8/6/n11433979.md
@@ -1,56 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÅíË¹»á¼ûÖÐ¹ú×Ú½ÌÈËÊ¿ ÒªÇó±±¾©×ðÖØÈËÈ¨</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/19-07-192.46-600x400.jpg" />
-<h6>7ÔÂ18ÈÕ£¬ÅíË¹Ëµ£º¡°ÎÞÂÛÎÒÃÇÓë±±¾©µÄÌ¸ÅÐÈçºÎ£¬Äã¶¼¿ÉÒÔÈ·ÐÅ£¬ÃÀ¹úÈËÃñ½«Ê¼ÖÕÓëÖÐ¹úËùÓÐÐÅÑöµÄÈËÃñÍÅ½áÒ»ÖÂ¡£¡±£¨ÊÚÈ¨Ó°Æ¬½ØÍ¼£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/mytgei3586/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å½­æ–¯ä¼šè§ä¸­å›½å®—æ•™äººå£« è¦æ±‚åŒ—äº¬å°Šé‡äººæƒ</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/19-07-192.46-600x400.jpg" />
+<h6>7æœˆ18æ—¥ï¼Œå½­æ–¯è¯´ï¼šâ€œæ— è®ºæˆ‘ä»¬ä¸ŽåŒ—äº¬çš„è°ˆåˆ¤å¦‚ä½•ï¼Œä½ éƒ½å¯ä»¥ç¡®ä¿¡ï¼Œç¾Žå›½äººæ°‘å°†å§‹ç»ˆä¸Žä¸­å›½æ‰€æœ‰ä¿¡ä»°çš„äººæ°‘å›¢ç»“ä¸€è‡´ã€‚â€ï¼ˆæŽˆæƒå½±ç‰‡æˆªå›¾ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ06ÈÕÑ¶¡¿<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%89%AF%E6%80%BB%E7%BB%9F%E5%BD%AD%E6%96%AF.md">ÃÀ¹ú¸±×ÜÍ³ÅíË¹</a>ÖÜÒ»£¨8ÔÂ5ÈÕ£©ÔÚ¸±×ÜÍ³°ì¹«ÊÒ£¬»á¼ûËÄÃûÊÜÑû²Î¼Ó<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1.md">¹ú¼Ê×Ú½Ì×ÔÓÉ</a>Ô²×À»áÒéµÄÕùÈ¡ÖÐ¹ú×Ú½Ì×ÔÓÉÈËÊ¿¡£</p>
-<p>ÃÀ¹úÖ®Òô±¨µ¼Ëµ£¬ÅíË¹ÖÜÒ»ÉÏÎç11Ê±ÔÚ¸±×ÜÍ³°ì¹«ÊÒ¾Ù°ì¡°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1.md">¹ú¼Ê×Ú½Ì×ÔÓÉ</a>Ô²×À»áÒé¡±£¬ÌÖÂÛÖÐ¹úµÄ×Ú½Ì×ÔÓÉÎÊÌâ¡£Óë»áµÄËÄÃû×Ú½Ì×ÔÓÉµÄ³«µ¼Õß£¬ÔÚÃÀ¹ú¹ú¼Ê×Ú½Ì×ÔÓÉÎÞÈÎËù´óÊ¹²¼ÀÊ°Í¿Ë£¨Sam Brownback£©µÄÅãÍ¬ÏÂ£¬ÓëÅíË¹»áÃæ¡£</p>
-<p>¸ù¾ÝÃÀ¹ú¸±×ÜÍ³°ì¹«ÊÒ·¢²¼ÐÂÎÅ¸å£¬ÅíË¹ÔÚ»á¼ûÖÐÖØÉê´¨ÆÕÕþ¸®ÓëÈ«Çò¸÷¹ú¼ÒµÄ¸÷<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%AE%97%E6%95%99%E4%BF%A1%E4%BB%B0.md">×Ú½ÌÐÅÑö</a>ÕßÕ¾ÔÚÒ»ÆðµÄ³ÐÅµ£¬°üÀ¨ÖÐ¹ú¡£ÃÀ¹úÕþ¸®½«¼ÌÐøºôÓõ±±¾©±£ÕÏÖÐ¹úÏÜ·¨ÖÐËù¹æ¶¨µÄ×Ú½Ì×ÔÓÉÈ¨Àû£¬ÈÃÐÅÑöÕßÄÜÔÚÈ«¹ú¸÷µØ×ÔÓÉµÄÐÅÑö¡£</p>
-<p>¾Ý×ÔÓÉÑÇÖÞµçÌ¨±¨µ¼£¬ÊÜµ½ÅíË¹»á¼ûµÄÓÐ»ù¶½Í½Î¬È¨×éÖ¯¡°¶Ô»ªÔ®ÖúÐ­»á¡±µÄ´´Ê¼ÈË¸µÏ£ÇïÄÁÊ¦£¬ÃÀ¹úÈËÈ¨×éÖ¯¹«ÃñÁ¦Á¿µÄ´´Ê¼ÈËÑî½¨Àû²©Ê¿£¬ÊÀ½çÎ¬Îá¶û´ó»á¸±Ö÷Ï¯ÎÚÂó¶û?¿¨ÄÉÌØ£¨Omer Kanat£©ºÍ·¨ÂÖ¹¦Ñ§Ô±´ú±í³ÂÏÈÉú¡£ÃÀ¹ú¹ú¼Ê×Ú½Ì×ÔÓÉ´óÊ¹ÈøÄ·?²¼ÀÊ±´¿ËÒ²³öÏ¯ÁË»á¼û¡£</p>
-<p>7ÔÂ18ÈÕ£¬ÅíË¹¸±×ÜÍ³Ôø³öÏ¯ÁËÃÀ¹ú¹úÎñÔºÖ÷°ìµÄµÚ¶þ½ìÍÆ½ø×Ú½Ì×ÔÓÉ²¿³¤¼¶»áÒé£¬ËûÔÚ»áÉÏ·¢±íÑÝ½²£¬Ç¿µ÷×Ú½Ì×ÔÓÉÊÇÃÀ¹úµÄÁ¢¹úÖ®±¾£¬¸üÊÇÍâ½»Õþ²ßµÄÒªÎñ¡£ÃÀ¹ú½«Óë¸÷¹ú¹²Í¬³ÉÁ¢¡°¹ú¼Ê×Ú½Ì×ÔÓÉÁªÃË¡±¡£</p>
-<p>ÅíË¹»¹ÅúÆÀÁËÖÐ¹²¶Ô×Ú½ÌÍÅÌåµÄÆÈº¦£¬µ«ÊÇËûËµ£¬ÖÐ¹²µÄÆÈº¦ÎÞ·¨×èÖ¹ÈËÃÇ¶ÔÓÚÐÅÑöµÄ×·Çó¡£<br />
-¡°ÖÐ¹úµÄÇé¿öÖ¤Ã÷ÁËÄÇÌõ¹ÅÀÏµÄÕæÀí¡ª¡ªÖ»ÓÐ¼á¶¨ÐÅÑöºÍ²»¶Ï¿¹Õù£¬²ÅÄÜ½áÊøÆÈº¦¡£¡±</p>
-<p>ÅíË¹»¹Ëµ£¬ÎÞÂÛÃÀÖÐÁ½¹úÃ³Ò×¹ØÏµÈçºÎ·¢Õ¹£¬¡°ÃÀ¹úÈËÃñÓÀÔ¶¼á¶¨µØÓëÓÐÐÅÑöµÄÖÐ¹úÈËÃñÕ¾ÔÚÒ»Æð£¬ÎÒÃÇÆíµ»£¬ÓÐÒ»ÌìËûÃÇ¿ÉÒÔÎÞ¾åÆÈº¦£¬×ÔÓÉµØ×ñ´Ó×Ô¼ºµÄÐÅÑö¡£¡±#</p>
-<p>ÔðÈÎ±à¼­£ºÍõÈôÓÞ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ06æ—¥è®¯ã€‘<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%89%AF%E6%80%BB%E7%BB%9F%E5%BD%AD%E6%96%AF.md#1">ç¾Žå›½å‰¯æ€»ç»Ÿå½­æ–¯</a>å‘¨ä¸€ï¼ˆ8æœˆ5æ—¥ï¼‰åœ¨å‰¯æ€»ç»ŸåŠžå…¬å®¤ï¼Œä¼šè§å››åå—é‚€å‚åŠ <ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1.md#1">å›½é™…å®—æ•™è‡ªç”±</a>åœ†æ¡Œä¼šè®®çš„äº‰å–ä¸­å›½å®—æ•™è‡ªç”±äººå£«ã€‚</p>
+<p>ç¾Žå›½ä¹‹éŸ³æŠ¥å¯¼è¯´ï¼Œå½­æ–¯å‘¨ä¸€ä¸Šåˆ11æ—¶åœ¨å‰¯æ€»ç»ŸåŠžå…¬å®¤ä¸¾åŠžâ€œ<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1.md#1">å›½é™…å®—æ•™è‡ªç”±</a>åœ†æ¡Œä¼šè®®â€ï¼Œè®¨è®ºä¸­å›½çš„å®—æ•™è‡ªç”±é—®é¢˜ã€‚ä¸Žä¼šçš„å››åå®—æ•™è‡ªç”±çš„å€¡å¯¼è€…ï¼Œåœ¨ç¾Žå›½å›½é™…å®—æ•™è‡ªç”±æ— ä»»æ‰€å¤§ä½¿å¸ƒæœ—å·´å…‹ï¼ˆSam Brownbackï¼‰çš„é™ªåŒä¸‹ï¼Œä¸Žå½­æ–¯ä¼šé¢ã€‚</p>
+<p>æ ¹æ®ç¾Žå›½å‰¯æ€»ç»ŸåŠžå…¬å®¤å‘å¸ƒæ–°é—»ç¨¿ï¼Œå½­æ–¯åœ¨ä¼šè§ä¸­é‡ç”³å·æ™®æ”¿åºœä¸Žå…¨çƒå„å›½å®¶çš„å„<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%AE%97%E6%95%99%E4%BF%A1%E4%BB%B0.md#1">å®—æ•™ä¿¡ä»°</a>è€…ç«™åœ¨ä¸€èµ·çš„æ‰¿è¯ºï¼ŒåŒ…æ‹¬ä¸­å›½ã€‚ç¾Žå›½æ”¿åºœå°†ç»§ç»­å‘¼ååŒ—äº¬ä¿éšœä¸­å›½å®ªæ³•ä¸­æ‰€è§„å®šçš„å®—æ•™è‡ªç”±æƒåˆ©ï¼Œè®©ä¿¡ä»°è€…èƒ½åœ¨å…¨å›½å„åœ°è‡ªç”±çš„ä¿¡ä»°ã€‚</p>
+<p>æ®è‡ªç”±äºšæ´²ç”µå°æŠ¥å¯¼ï¼Œå—åˆ°å½­æ–¯ä¼šè§çš„æœ‰åŸºç£å¾’ç»´æƒç»„ç»‡â€œå¯¹åŽæ´åŠ©åä¼šâ€çš„åˆ›å§‹äººå‚…å¸Œç§‹ç‰§å¸ˆï¼Œç¾Žå›½äººæƒç»„ç»‡å…¬æ°‘åŠ›é‡çš„åˆ›å§‹äººæ¨å»ºåˆ©åšå£«ï¼Œä¸–ç•Œç»´å¾å°”å¤§ä¼šå‰¯ä¸»å¸­ä¹Œéº¦å°”?å¡çº³ç‰¹ï¼ˆOmer Kanatï¼‰å’Œæ³•è½®åŠŸå­¦å‘˜ä»£è¡¨é™ˆå…ˆç”Ÿã€‚ç¾Žå›½å›½é™…å®—æ•™è‡ªç”±å¤§ä½¿è¨å§†?å¸ƒæœ—è´å…‹ä¹Ÿå‡ºå¸­äº†ä¼šè§ã€‚</p>
+<p>7æœˆ18æ—¥ï¼Œå½­æ–¯å‰¯æ€»ç»Ÿæ›¾å‡ºå¸­äº†ç¾Žå›½å›½åŠ¡é™¢ä¸»åŠžçš„ç¬¬äºŒå±ŠæŽ¨è¿›å®—æ•™è‡ªç”±éƒ¨é•¿çº§ä¼šè®®ï¼Œä»–åœ¨ä¼šä¸Šå‘è¡¨æ¼”è®²ï¼Œå¼ºè°ƒå®—æ•™è‡ªç”±æ˜¯ç¾Žå›½çš„ç«‹å›½ä¹‹æœ¬ï¼Œæ›´æ˜¯å¤–äº¤æ”¿ç­–çš„è¦åŠ¡ã€‚ç¾Žå›½å°†ä¸Žå„å›½å…±åŒæˆç«‹â€œå›½é™…å®—æ•™è‡ªç”±è”ç›Ÿâ€ã€‚</p>
+<p>å½­æ–¯è¿˜æ‰¹è¯„äº†ä¸­å…±å¯¹å®—æ•™å›¢ä½“çš„è¿«å®³ï¼Œä½†æ˜¯ä»–è¯´ï¼Œä¸­å…±çš„è¿«å®³æ— æ³•é˜»æ­¢äººä»¬å¯¹äºŽä¿¡ä»°çš„è¿½æ±‚ã€‚â€œä¸­å›½çš„æƒ…å†µè¯æ˜Žäº†é‚£æ¡å¤è€çš„çœŸç†â€”â€”åªæœ‰åšå®šä¿¡ä»°å’Œä¸æ–­æŠ—äº‰ï¼Œæ‰èƒ½ç»“æŸè¿«å®³ã€‚â€</p>
+<p>å½­æ–¯è¿˜è¯´ï¼Œæ— è®ºç¾Žä¸­ä¸¤å›½è´¸æ˜“å…³ç³»å¦‚ä½•å‘å±•ï¼Œâ€œç¾Žå›½äººæ°‘æ°¸è¿œåšå®šåœ°ä¸Žæœ‰ä¿¡ä»°çš„ä¸­å›½äººæ°‘ç«™åœ¨ä¸€èµ·ï¼Œæˆ‘ä»¬ç¥ˆç¥·ï¼Œæœ‰ä¸€å¤©ä»–ä»¬å¯ä»¥æ— æƒ§è¿«å®³ï¼Œè‡ªç”±åœ°éµä»Žè‡ªå·±çš„ä¿¡ä»°ã€‚â€#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‹è‹¥æ„š</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/6/n11433979.htm">ÅíË¹»á¼ûÖÐ¹ú×Ú½ÌÈËÊ¿ ÒªÇó±±¾©×ðÖØÈËÈ¨</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/11/n11378353.htm">ÖÐ¹²ÆÈº¦ÐÅÑö  ÅíË¹£ºÃÀ¹ú»á´¦Àí´ËÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/30/n11290865.htm">ÅíË¹·Ã¼Ó£º´¨ÆÕ½«¶Ø´ÙÖÐ¹²ÊÍ·Å¼Ó¹ú¹«Ãñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11282494.htm">ÅíË¹¶ÔÎ÷µã±ÏÒµÉú½²»°: ÄãÃÇ½«ÎªÃÀ¹ú¶øÕ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/7/n11240760.htm">ÅíË¹£ºÓëÂí¶ÅÂÞ¾öÁÑµÄ½«¾ü±»½â³ýÖÆ²Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/5/n11091430.htm">ÅíË¹Ì¸2020´óÑ¡£ºÒª×ÔÓÉ ²»ÒªÉç»áÖ÷Òå</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/1/n11082273.htm">±£ÊØÅÉ´ó»áÈËÊý´´¼ÍÂ¼ ÅíË¹³Æ²»¸ãÉç»áÖ÷Òå</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/18/n11053743.htm">ÖÜÏþ»Ô£ºÅíË¹ÐÂÑÝ½²Í¸¶ËÄß ¶ôÖÐ¹²²»Ö»Ã³Ò×Õ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/13/n11042705.htm">²¨À¼³ÐÅµ±£»¤µçÐÅÒµÃâÊÜÖÐ¹²ÇÖº¦ ÅíË¹³ÆÔÞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/23/n10869963.htm">Î´ÆÕ£º´ÓÅíË¹µÄÈýÆª½²»°¿´ÃÀÖÐ¹ØÏµµÄÎ´À´ÑÝ±ä£¨ÉÏ£©</a></li>
-> <li><a href="https://github.com/cbzs/djy/blob/master/gb/19/7/11/n11378353.md">ÖÐ¹²ÆÈº¦ÐÅÑö  ÅíË¹£ºÃÀ¹ú»á´¦Àí´ËÊÂ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11430778.htm">¡¾Ö±²¥¡¿8.5°Õ¹¤ ÆßÇø¼¯»á ¸Û¾¯·Å´ßÀáµ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11431456.htm">¡¾¸üÐÂ¡¿Óâ15Íò¸ÛÈË8.5¼¯»á ¾¯³ö¶¯×°¼×³µ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11431285.htm">¶Ô¿¹ÖÐ¹²Á³²¿±æÊ¶ÏµÍ³ Ïã¸ÛÊ¾ÍþÕßÓÐÐÂÕÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11431563.htm">¡¾·­Ç½±Ø¿´¡¿Ö±»÷8.5¡°È«¸ÛÈý´ó°Õ¡±ÐÐ¶¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11381871.htm">¡¾ÏÍºó´«¡¿´óÇå¹úÄ¸Ð¢×¯ÎÄ»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/29/n11416959.htm">Ç§Äê·çËª²»ÄÜÇÖÊ´£ºÇØÊ¼»ÊÁêÖ®ÃÕ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/31/n11420769.htm">¡¾ÎÄÊ·¡¿¿µÎõÁù´ÎÄÏÑ²Ö÷ÒªÎªÒ»¼þÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/8/29/n8247281.htm">¡¾ÎÄÊ·¡¿ººÎäµÛÍ¨Î÷Óò ¿ªÆôË¿³ñÖ®Â·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/3/n11429111.htm">¡¾·­Ç½±Ø¿´¡¿Éú²úÏß´óÁ¿ÒÆ³öÖÐ¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/28/n11413951.htm">ÖÐ¹²ÈçºÎÓÃ»ªÎªÊÖ»ú¼à¿Ø ÃÀÍËÒÛ½«¾ü¸æËßÄã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11429230.htm">¡¾Ö±²¥¡¿17ÍòÈË8.4½«¾ü°Ä¡¢¸ÛµºÎ÷ÓÎÐÐ¼¯»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11431652.htm">¡¾ÃÀÊ³ÌìÌÃ¡¿Ô½ÄÏ´º¾í |ÏÄÈÕÍêÃÀÊ³Æ×|</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/2/n11427097.htm">¡¾ÀÏÍâ¿´ÖÐ¹ú¡¿Ò»¹úÁ½ÖÆ£¿¸ÛÈË¶ÔÌ¨ÍåµÄÖÒ¸æ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/6/n11433561.htm">¡¾ÅÄ°¸¾ªÆæ¡¿´ÓÁùËÄµ½·´ËÍÖÐ ¸ÛÐÇµÄÂÒÊÀ¾ñÔñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11429947.htm">Êæ»ªÁ¬3ÈÕÉÏ´«×ÔÅÄÕÕ ¹«¿ª¸°º«Ê×ÔÂÇàÉ¬Ä£Ñù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/2/n11426868.htm">Á÷ÀË¹·ÐÐÏÀÕÌÒå Ò§¶ÏË©ÉþÇ£×ß¼ÒÈ® ÍøÐ¦·­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11430629.htm">Å·½õÌÄ·ÖÏíÓÎÐÐ¼ûÎÅ£ºÈËÈËÈÆ¿ª100Ôª´ó³®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11430457.htm">·¶±ù±ùÊ×¶È»ØÓ¦ÌÓË°·ç²¨£º¸´³ö´¦ÓÚÊ®×ÖÂ·¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11433110.htm">ÖÚÐÇ³°·íÏã¸ÛÌØÊ×¼ÇÕß»á ÎÌ¾²¾§£ºÁÖÖ£Â¼Òô»ú</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/11/23/n10869963.md#1">æœªæ™®ï¼šä»Žå½­æ–¯çš„ä¸‰ç¯‡è®²è¯çœ‹ç¾Žä¸­å…³ç³»çš„æœªæ¥æ¼”å˜ï¼ˆä¸Šï¼‰</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/2/13/n11042705.md#1">æ³¢å…°æ‰¿è¯ºä¿æŠ¤ç”µä¿¡ä¸šå…å—ä¸­å…±ä¾µå®³ å½­æ–¯ç§°èµž</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/2/18/n11053743.md#1">å‘¨æ™“è¾‰ï¼šå½­æ–¯æ–°æ¼”è®²é€ç«¯å€ª éä¸­å…±ä¸åªè´¸æ˜“æˆ˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/3/1/n11082273.md#1">ä¿å®ˆæ´¾å¤§ä¼šäººæ•°åˆ›çºªå½• å½­æ–¯ç§°ä¸æžç¤¾ä¼šä¸»ä¹‰</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/8/6/n11433979.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">ä½ ä¸äº†è§£çš„é‚“å°å¹³ï¼šä¸Žæ¯›ä¸€åŒæŒ‡æŒ¥å¤§è·ƒè¿›ï¼ˆä¸Šï¼‰</a></li><li><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">æ­£æ¸…ï¼šæ³•è½®åŠŸæ²¡æœ‰â€œç”·å¥³åŒä¿®â€</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550540.md#1">å› é¢„è¨€ä¸­å…±ç—…æ¯’çˆ†çº¢ å°åº¦ç”·å­©é¢„ç¤ºæ¥å¹´å¤©è±¡</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546586.md#1">ç´«å¾®æ–—æ•°æŽ¨ç®—  å°è°ˆæ‹œç™»çœŸèƒ½ç™»å¤§ä½å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12553064.md#1">è‹±ç”·å£°ç§°è¢«å¤–æ˜Ÿäººç»‘æž¶ åœ¨å¤ªç©ºèˆ¹ä¸Šé‡åˆ°æ­Œæ˜Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12541883.md#1">çªå‡ºéƒ¨ä¹‹å½¹ å·´é¡¿å°†å†›çš„ç¥žè¿¹ä¹‹æˆ˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556457.md#1">ä»Žã€Šç‹®å­çŽ‹ã€‹ç»å…¸å°è¯ çœ‹å¤©é€‰ä¹‹çŽ‹çš„æˆé•¿</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561687.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘æ´‹è‘±ç‚’ç‰›è‚‰</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561919.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘é’±å¤šå¤šéº»çƒ¦å¤š â€œå‰²å¯Œè±ªâ€æ—¶ä»£åˆ°æ¥</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562870.md#1">ã€å¤§é™†æ–°é—»è§£æ¯’ã€‘æ—¶äº‹å°å“ï¼šå¤šçŒ«è…»è·¨å›½æžæ”¿å˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558221.md#1">ã€å¤§é€‰æ›´æ–°11.18ã€‘æž—ä¼å¾·ï¼šå·æ™®å°†å‡»è´¥æ‰€æœ‰å¯¹æ‰‹</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557575.md#1">è®¡ç®—â€œé‚®å¯„é€‰ç¥¨â€åŽåè¶… ç›‘å¯Ÿå‘˜ï¼šåº”åœç‚¹é‚®å¯„é€‰ç¥¨</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559329.md#1">å¯†æ­‡æ ¹éŸ¦æ©åŽ¿è®¤è¯é€‰ä¸¾ç»“æžœåè½¬å†…å¹•æ›å…‰</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559155.md#1">å­™ä¿ªæ™’å…­å²å¥³å„¿æ¯›ç¬”å­— å°èŠ±ç‰ˆåƒå­—æ–‡å­—ä½“å·¥æ•´</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556222.md#1">ç‰è±ªå†›ä¸­å›žå¿†æœ‰TWICEçš„æ­Œ æ„Ÿè°¢å¥³å›¢ç»™å£«å…µåŠ›é‡</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556732.md#1">æž—é’éœžç”Ÿæ—¥å‡ºæ–°ä¹¦ å¸–æ–‡è¯å®žä¸Žå¯Œå•†ä¸ˆå¤«æƒ…æœªå˜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12557059.md#1">åœŸå›½è¡¨å¦¹ç¡®è¯ŠæŸ“ç–« å´å‡¤å¹ç—…æ¯’æŠŠå¤šå›½å˜æˆåœ°ç‹±</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560394.md#1">å§œç´ æ‹‰æ€€å­•èŽ·å…¬å¸è¯å®ž å­©å­é¢„è®¡æ˜Žå¹´4æœˆå‡ºç”Ÿ</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557834.md#1">ã€ç¾Žé£Ÿå¤©å ‚ã€‘4ç§æ–¹æ³•é•¿ä¹…ä¿å­˜å§œï½žå‡ ä¸ªæœˆéƒ½æ–°é²œï¼</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557479.md#1">å…¨çƒæœ€åŽä¸€åªç™½è‰²é•¿é¢ˆé¹¿ åŠ è£…GPSè¿½è¸ªå™¨</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557985.md#1">45äº¿å¹´åŽ†å²é™¨çŸ³ç ¸ç ´å±‹é¡¶ å°å°¼ç”·å­å˜å¤§å¯Œç¿</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1">å‡¡å£«æž—ä¸åªä¿æ¹¿ æœ‰5å¤§å¦™ç”¨ æŒ‘é€‰çœ‹1ç‚¹</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550494.md#1">å†·è—è‚‰ä¸Žå†·å†»è‚‰ä¸ä¸€æ · è´­ä¹°æ—¶è¦çå¤§çœ¼ç›</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/6/n11433979.htm">å½­æ–¯ä¼šè§ä¸­å›½å®—æ•™äººå£« è¦æ±‚åŒ—äº¬å°Šé‡äººæƒ</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/19/8/6/n11433979.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
